fix z-index of submenu

--- a/frontend/src/layouts/header/Header.module.scss
+++ b/frontend/src/layouts/header/Header.module.scss
@@ -56,6 +56,7 @@ header {
         }
 
         .navListMenu {
+          z-index: 9999;
           width: 100%;
           margin: 0;
           padding: 1rem 0;
