--- a/frontend/src/layouts/header/MainNavLink.module.scss
+++ b/frontend/src/layouts/header/MainNavLink.module.scss
@@ -5,8 +5,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.125rem;
-    font-weight: 600;
+    font-size: map-get($text-lg, font-size);
+    line-height: map-get($text-lg, line-height);
+    font-weight: $font-semibold;
     text-decoration: none;
     color: $text-primary-color;
 
@@ -42,6 +43,7 @@
         width: 100%;
         height: 100%;
         color: $text-primary-color;
+        transition: color 0.3s ease;
 
         &:hover {
           color: white;
